JBR-291 refactoring - create IT for testing the migration to the new structure.

--- a/src/test/resources/db/changelog/db.changelog-migration-data.yaml
+++ b/src/test/resources/db/changelog/db.changelog-migration-data.yaml
@@ -10,3 +10,19 @@ databaseChangeLog:
         - loadData:
             tableName: source
             file: /db/changelog/migration-importsource.csv
+
+        - loadData:
+            tableName: directory
+            file: /db/changelog/migration-directory.csv
+
+        - loadData:
+            tableName: file
+            file: /db/changelog/migration-file.csv
+
+        - loadData:
+            tableName: ignore_file
+            file: /db/changelog/migration-ignore_file.csv
+
+        - loadData:
+            tableName: import_file
+            file: /db/changelog/migration-import_file.csv
