JBR-291 refactoring - create IT for testing the migration to the new structure.

--- a/src/main/resources/db/changelog/db.changelog-017-refactorsource.yaml
+++ b/src/main/resources/db/changelog/db.changelog-017-refactorsource.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 15
+      id: 17
       author: jason
       changes:
 
@@ -18,20 +18,6 @@ databaseChangeLog:
                   name: destination
                   type: int
 
-        - addForeignKeyConstraint:
-            constraintName: fk_imp_source
-            baseTableName: import_source
-            baseColumnNames: id
-            referencedTableName: source
-            referencedColumnNames: id
-
-        - addForeignKeyConstraint:
-            constraintName: fk_dest_source
-            baseTableName: import_source
-            baseColumnNames: destination
-            referencedTableName: source
-            referencedColumnNames: id
-
         # copy the data from source table to the file_system_object.
         - sql:
             sql: |
@@ -48,6 +34,7 @@ databaseChangeLog:
               insert into import_source(id,destination)
               select id, destination from source where source_type = 'IMP'
 
+        # remove columns that are now in the other tables.
         - dropColumn:
             columnName: destination
             tableName: source
@@ -59,10 +46,3 @@ databaseChangeLog:
         - dropColumn:
             columnName: source_type
             tableName: source
-
-        - addForeignKeyConstraint:
-            constraintName: fk_fso_source
-            baseTableName: source
-            baseColumnNames: id
-            referencedTableName: file_system_object
-            referencedColumnNames: id
