--- a/src/main/resources/db/changelog/db.changelog-018-refactordirectory.yaml
+++ b/src/main/resources/db/changelog/db.changelog-018-refactordirectory.yaml
@@ -6,6 +6,10 @@ databaseChangeLog:
         # copy the data from source table to the file_system_object.
         - sql:
             sql: |
+              update directory set id = id + 101
+
+        - sql:
+            sql: |
               insert into file_system_object(id,type,name,parent,parent_type)
               select id, 'DIRY', path, source_id, 'SRCE' from directory
 
