JBR-291 refactoring - create IT for testing the migration to the new structure.

--- a/src/main/resources/db/changelog/db.changelog-020-refactorignore.yaml
+++ b/src/main/resources/db/changelog/db.changelog-020-refactorignore.yaml
@@ -15,8 +15,8 @@ databaseChangeLog:
 
         - sql:
             sql: |
-              insert into file(id,size,date,md5)
-              select id, size, date, md5 from ignore_file
+              insert into file(id,size,date,md5,removed)
+              select id, size, date, md5, 0 from ignore_file
 
 
         # remove the columns not required.
