JBR-291 refactoring - create IT for testing the migration to the new structure.

--- a/src/test/resources/db/changelog/db.changelog-migration-data.yaml
+++ b/src/test/resources/db/changelog/db.changelog-migration-data.yaml
@@ -22,3 +22,7 @@ databaseChangeLog:
         - loadData:
             tableName: import_file
             file: /db/changelog/migration-import_file.csv
+
+        - loadData:
+            tableName: action_confirm
+            file: /db/changelog/migration-action_confirm.csv
