--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -23,6 +23,10 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     contexts: default
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 backup:
   db-backup-command: mysqldump -h $$server$$ -u $$user$$ -p$$password$$ $$dbname$$ > $$todaydir$$/$$backupname$$/$$output$$.sql
   db-backup-max-time: 600
