JBR-291 refactoring - create IT for testing the migration to the new structure.

--- a/src/main/resources/db/changelog/db.changelog-021-refactorimport.yaml
+++ b/src/main/resources/db/changelog/db.changelog-021-refactorimport.yaml
@@ -11,8 +11,14 @@ databaseChangeLog:
         - sql:
             sql: |
               update file_system_object
-              set type = 'IMPS'
+              set type = 'IMPO'
               where id in ( select file_id from import_file )
+
+        - sql:
+            sql: |
+              update file_system_object
+              set parent_type = 'IMPS'
+              where type = 'IMPO'
 
         - sql:
             sql: |
