JBR-321 - check file that indicates source is mounted.

--- a/src/test/resources/db/changelog/db.changelog-migration.yaml
+++ b/src/test/resources/db/changelog/db.changelog-migration.yaml
@@ -76,6 +76,9 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-024-createfk.yaml
 
   - include:
+      file: /db/changelog/db.changelog-025-mountchk.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
 
   - include:
