--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -73,4 +73,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-024-createfk.yaml
 
   - include:
+      file: /db/changelog/db.changelog-025-mountchk.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
