--- a/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
+++ b/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
@@ -73,5 +73,8 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-024-createfk.yaml
 
   - include:
+      file: /db/changelog/db.changelog-025-mountchk.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
 
