JBR-318 update the import function

--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,12 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-imaging</artifactId>
+            <version>1.0-alpha3</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
