--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -76,4 +76,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-025-mountchk.yaml
 
   - include:
+      file: /db/changelog/db.changelog-026-preimport.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
