--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -30,6 +30,7 @@ spring:
 backup:
   db-backup-command: mysqldump -h $$server$$ -u $$user$$ -p$$password$$ $$dbname$$ > $$todaydir$$/$$backupname$$/$$output$$.sql
   db-backup-max-time: 600
+  ffmpeg-command: ffmpeg -i %%INPUT%% -qscale 0 %%OUTPUT%%
   gather-schedule: 0 0 0 * * ?
   gather-enabled: false
   schedule: 0 20 0/1 * * ?
