JBR-314 - Move DB logging to the backup DB

--- a/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
+++ b/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
@@ -79,5 +79,8 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-026-preimport.yaml
 
   - include:
+      file: /db/changelog/db.changelog-027-log.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
 
