--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -82,4 +82,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-027-log.yaml
 
   - include:
+      file: /db/changelog/db.changelog-028-expiry.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
