--- a/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
+++ b/src/test/resources/db/changelog/db.changelog-unitmaster.yaml
@@ -82,5 +82,8 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-027-log.yaml
 
   - include:
+      file: /db/changelog/db.changelog-028-log.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
 
