JBR-393, JBR-395 and JBR-394 - enhancements.

--- a/src/main/resources/config/application-dbg-pdn.yml
+++ b/src/main/resources/config/application-dbg-pdn.yml
@@ -11,6 +11,9 @@ spring:
     username: ${db.pdn.backup.user}
     password: ${db.pdn.backup.password}
 
+  liquibase:
+    enabled: false
+
   jpa:
     properties:
       hibernate:
