--- a/src/main/resources/config/application-dbg.yml
+++ b/src/main/resources/config/application-dbg.yml
@@ -6,6 +6,8 @@ logging:
 
 spring:
   liquibase:
+    default-schema:
+    change-log: classpath:/db/changelog/h2/db.changelog-master.yaml
     contexts: dbg
 
   jpa:
