--- a/src/main/resources/config/application-dbg-dev.yml
+++ b/src/main/resources/config/application-dbg-dev.yml
@@ -10,6 +10,9 @@ spring:
     username: ${db.dev.backup.user}
     password: ${db.dev.backup.password}
 
+  liquibase:
+    enabled: false
+
   jpa:
     properties:
       hibernate:
