--- a/src/main/resources/config/application-dbg.yml
+++ b/src/main/resources/config/application-dbg.yml
@@ -15,6 +15,10 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+    hibernate:
+      naming:
+        physical-strategy: com.jbr.middletier.backup.util.DebugPhysicalNamingStrategyImpl
+
 
 backup:
   directory:
