--- a/src/main/resources/db/changelog/h2/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/h2/db.changelog-master.yaml
@@ -85,5 +85,5 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-028-expiry.yaml
 
   - include:
-      file: /db/changelog/db.changelog-999-dbgdata.yaml
+      file: /db/changelog/h2/db.changelog-999-dbgdata.yaml
 
