--- a/src/main/resources/db/changelog/h2/db.changelog-999-dbgdata.yaml
+++ b/src/main/resources/db/changelog/h2/db.changelog-999-dbgdata.yaml
@@ -9,7 +9,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: useMD5
-                  valueBoolean: true
+                  valueBoolean: "true"
             tableName: classification
             where: regex = '.*\.txt$'
 
@@ -28,10 +28,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 1
+                  value: "1"
               - column:
                   name: location
-                  value: 1
+                  value: "1"
               - column:
                   name: status
                   value: OK
@@ -54,13 +54,45 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 2
+                  value: "2"
               - column:
                   name: location
-                  value: 1
+                  value: "1"
               - column:
                   name: status
                   value: OK
               - column:
                   name: mount_check
                   value: /home/jason/Working/DbgBackupSources/Destination/MountCheck.txt
+
+        - insert:
+            tableName: file_system_object
+            columns:
+              - column:
+                  name: type
+                  value: FILE
+              - column:
+                  name: name
+                  value: fred.txt
+              - column:
+                  name: parent
+                  value: "1"
+              - column:
+                  name: parent_type
+                  value: SRCE
+
+        - insert:
+            tableName: file
+            columns:
+              - column:
+                  name: id
+                  value: "3"
+              - column:
+                  name: classification_id
+                  value: "10"
+              - column:
+                  name: size
+                  value: "390"
+              - column:
+                  name: date
+                  value: "2023-09-20"
