JBR-393, JBR-395 and JBR-394 - enhancements.

--- a/src/main/resources/db/changelog/h2/db.changelog-999-dbgdata.yaml
+++ b/src/main/resources/db/changelog/h2/db.changelog-999-dbgdata.yaml
@@ -294,3 +294,43 @@ databaseChangeLog:
               - column:
                   name: MD5
                   value: "BAADBEEFBAADBEEFBAADBEEFBAADBEEF"
+
+        - insert:
+            tableName: label
+            columns:
+              - column:
+                  name: id
+                  value: "1"
+              - column:
+                  name: name
+                  value: "Passport"
+
+        - insert:
+            tableName: label
+            columns:
+              - column:
+                  name: id
+                  value: "2"
+              - column:
+                  name: name
+                  value: "Certificate"
+
+        - insert:
+            tableName: label
+            columns:
+              - column:
+                  name: id
+                  value: "3"
+              - column:
+                  name: name
+                  value: "House"
+
+        - insert:
+            tableName: file_label
+            columns:
+              - column:
+                  name: file_id
+                  value: "5"
+              - column:
+                  name: label_id
+                  value: "1"
