--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
          its the basic class and difficult to test.
          -->
         <sonar.coverage.exclusions>**/SpringFoxConfig.java,**/MiddleTier.java</sonar.coverage.exclusions>
+        <sonar.organization>jbrmmg</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 
@@ -37,6 +39,11 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
