JBR-395 clean up and testing.

--- a/src/main/resources/db/changelog/db.changelog-028-expiry.yaml
+++ b/src/main/resources/db/changelog/db.changelog-028-expiry.yaml
@@ -106,16 +106,16 @@ databaseChangeLog:
                   value: 2x2 in
               - column:
                   name: width_in
-                  value: 2
+                  value: "2"
               - column:
                   name: height_in
-                  value: 2
+                  value: "2"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -125,16 +125,16 @@ databaseChangeLog:
                   value: 2x3 in
               - column:
                   name: width_in
-                  value: 2
+                  value: "2"
               - column:
                   name: height_in
-                  value: 3
+                  value: "3"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -144,16 +144,16 @@ databaseChangeLog:
                   value: 3x3 in
               - column:
                   name: width_in
-                  value: 3
+                  value: "3"
               - column:
                   name: height_in
-                  value: 3
+                  value: "3"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -163,16 +163,16 @@ databaseChangeLog:
                   value: 2x2.5 in [Retro]
               - column:
                   name: width_in
-                  value: 2
+                  value: "2"
               - column:
                   name: height_in
-                  value: 2.5
+                  value: "2.5"
               - column:
                   name: retro
-                  valueBoolean: true
+                  valueBoolean: "true"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -182,16 +182,16 @@ databaseChangeLog:
                   value: 4x5 in [Retro]
               - column:
                   name: width_in
-                  value: 4
+                  value: "4"
               - column:
                   name: height_in
-                  value: 5
+                  value: "5"
               - column:
                   name: retro
-                  valueBoolean: true
+                  valueBoolean: "true"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -201,16 +201,16 @@ databaseChangeLog:
                   value: 6x4.5 in [Retro]
               - column:
                   name: width_in
-                  value: 6
+                  value: "6"
               - column:
                   name: height_in
-                  value: 4.5
+                  value: "4.5"
               - column:
                   name: retro
-                  valueBoolean: true
+                  valueBoolean: "true"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -220,16 +220,16 @@ databaseChangeLog:
                   value: 4x4 in
               - column:
                   name: width_in
-                  value: 4
+                  value: "4"
               - column:
                   name: height_in
-                  value: 4
+                  value: "4"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -239,16 +239,16 @@ databaseChangeLog:
                   value: 5x5 in
               - column:
                   name: width_in
-                  value: 5
+                  value: "5"
               - column:
                   name: height_in
-                  value: 5
+                  value: "5"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -258,16 +258,16 @@ databaseChangeLog:
                   value: 6x6 in
               - column:
                   name: width_in
-                  value: 6
+                  value: "6"
               - column:
                   name: height_in
-                  value: 6
+                  value: "6"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -277,16 +277,16 @@ databaseChangeLog:
                   value: 8x8 in
               - column:
                   name: width_in
-                  value: 8
+                  value: "8"
               - column:
                   name: height_in
-                  value: 8
+                  value: "8"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -296,16 +296,16 @@ databaseChangeLog:
                   value: 10x10 in
               - column:
                   name: width_in
-                  value: 10
+                  value: "10"
               - column:
                   name: height_in
-                  value: 10
+                  value: "10"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -315,16 +315,16 @@ databaseChangeLog:
                   value: 6x4 in
               - column:
                   name: width_in
-                  value: 6
+                  value: "6"
               - column:
                   name: height_in
-                  value: 4
+                  value: "4"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -334,16 +334,16 @@ databaseChangeLog:
                   value: 7x5 in
               - column:
                   name: width_in
-                  value: 7
+                  value: "7"
               - column:
                   name: height_in
-                  value: 5
+                  value: "5"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -353,16 +353,16 @@ databaseChangeLog:
                   value: 8x6 in
               - column:
                   name: width_in
-                  value: 8
+                  value: "8"
               - column:
                   name: height_in
-                  value: 6
+                  value: "6"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -372,16 +372,16 @@ databaseChangeLog:
                   value: 10x8 in
               - column:
                   name: width_in
-                  value: 10
+                  value: "10"
               - column:
                   name: height_in
-                  value: 8
+                  value: "8"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -391,16 +391,16 @@ databaseChangeLog:
                   value: 12x8 in
               - column:
                   name: width_in
-                  value: 12
+                  value: "12"
               - column:
                   name: height_in
-                  value: 8
+                  value: "8"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -410,16 +410,16 @@ databaseChangeLog:
                   value: A4
               - column:
                   name: width_in
-                  value: 8.3
+                  value: "8.3"
               - column:
                   name: height_in
-                  value: 11.7
+                  value: "11.7"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -429,16 +429,16 @@ databaseChangeLog:
                   value: 16x12 in
               - column:
                   name: width_in
-                  value: 16
+                  value: "16"
               - column:
                   name: height_in
-                  value: 12
+                  value: "12"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -448,16 +448,16 @@ databaseChangeLog:
                   value: 20x16 in
               - column:
                   name: width_in
-                  value: 20
+                  value: "20"
               - column:
                   name: height_in
-                  value: 16
+                  value: "16"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -467,16 +467,16 @@ databaseChangeLog:
                   value: 12x12 in
               - column:
                   name: width_in
-                  value: 12
+                  value: "12"
               - column:
                   name: height_in
-                  value: 12
+                  value: "12"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -486,16 +486,16 @@ databaseChangeLog:
                   value: 16x16 in
               - column:
                   name: width_in
-                  value: 16
+                  value: "16"
               - column:
                   name: height_in
-                  value: 16
+                  value: "16"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -505,16 +505,16 @@ databaseChangeLog:
                   value: 18x18 in
               - column:
                   name: width_in
-                  value: 18
+                  value: "18"
               - column:
                   name: height_in
-                  value: 18
+                  value: "18"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -524,16 +524,16 @@ databaseChangeLog:
                   value: 20x20 in
               - column:
                   name: width_in
-                  value: 20
+                  value: "20"
               - column:
                   name: height_in
-                  value: 20
+                  value: "20"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: false
+                  valueBoolean: "false"
 
         - insert:
             tableName: print_size
@@ -543,16 +543,16 @@ databaseChangeLog:
                   value: 20x10 in [Panoramic]
               - column:
                   name: width_in
-                  value: 20
+                  value: "20"
               - column:
                   name: height_in
-                  value: 10
+                  value: "10"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: true
+                  valueBoolean: "true"
 
         - insert:
             tableName: print_size
@@ -562,13 +562,13 @@ databaseChangeLog:
                   value: 36x12 in [Panoramic]
               - column:
                   name: width_in
-                  value: 36
+                  value: "36"
               - column:
                   name: height_in
-                  value: 12
+                  value: "12"
               - column:
                   name: retro
-                  valueBoolean: false
+                  valueBoolean: "false"
               - column:
                   name: panoramic
-                  valueBoolean: true
+                  valueBoolean: "true"
